# touchtype

./: .gitignore  Cargo.toml  README.md  shell.nix
data/: char_widths.txt  t8.shakespeare.freq
scripts/: freq.py
src/: main.rs  model.rs  msg.rs  run_enumerate.rs  session.rs  stats.rs  uniq_enumerate.rs  utils.rs
src/comp/: keyboard.rs  mod.rs  practice.rs  stats.rs
