[package]
name = "touchtype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
rand = "0.8.5"
rand_distr = "0.4.3"
relm4 = "0.6.2"
relm4-components = "0.6.2"
relm4-macros = "0.6.2"
thiserror = "1.0.50"
